@@ -1,3 +1,9 @@
+2001-07-07  Mark Kettenis  <kettenis@gnu.org>
+
+	* sysdeps/mach/hurd/i386/exc2signal.c (_hurd_exception2signal):
+	Generate SIGSEGV instead of SIGBUS for KERN_INVALID_ADDRESS and
+	KERN_WRITE_PROTECTION_FAILURE.
+
 2001-07-07  Ulrich Drepper  <drepper@redhat.com>
 
 	* posix/regex.c: Limit string length printed in debug messages to
